--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
           <div class="card">
             <img
               width="50px"
-              src="../images/shina.jpeg"
+              src="./images/shina.jpeg"
               class="card-img-top"
               alt="..."
             />
@@ -64,7 +64,7 @@
           <div class="card">
             <img
               width="50px"
-              src="../images/shina2.jpeg"
+              src="./images/shina2.jpeg"
               class="card-img-top"
               alt="..."
             />
@@ -82,7 +82,7 @@
           <div class="card">
             <img
               width="50px"
-              src="../images/shina3.jpeg"
+              src="./images/shina3.jpeg"
               class="card-img-top"
               alt="..."
             />
@@ -99,7 +99,7 @@
         </div>
         <div class="card-group">
           <div class="card">
-            <img src="../images/shyna5.jpeg" class="card-img-top" alt="..." />
+            <img src="./images/shyna5.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Вантажні шини</h5>
               <p class="card-text">
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../images/disk.jpeg" class="card-img-top" alt="..." />
+            <img src="./images/disk.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Литі диски</h5>
               <p class="card-text">
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="../images/disk2.jpeg" class="card-img-top" alt="..." />
+            <img src="./images/disk2.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Сталеві диски</h5>
               <p class="card-text">
@@ -142,7 +142,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card">
-              <img src="../images/akum.jpeg" class="card-img-top" alt="..." />
+              <img src="./images/akum.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Автомобільні акумулятори</h5>
                 <p class="card-text">
@@ -156,7 +156,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="../images/akum2.jpeg" class="card-img-top" alt="..." />
+              <img src="./images/akum2.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Мото-акумулятори</h5>
                 <p class="card-text">
