--- a/products.html
+++ b/products.html
@@ -59,6 +59,13 @@
                 заміни зимового комплекту покришок на літній. Якість літньої
                 гуми впливає на комфорт під час їзди й безпеку на дорозі.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
           <div class="card">
@@ -77,6 +84,13 @@
                 Зате при негативних температурах вони не «дубіють», і їзда на
                 таких покришках безпечна навіть у найлютіший мороз.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
           <div class="card">
@@ -94,6 +108,13 @@
                 моделі, які забезпечують хороше зчеплення навіть з кригою, а
                 також снігом або промерзлим асфальтом.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
         </div>
@@ -109,6 +130,13 @@
                 витрату палива і безліч інших характеристик. Тому вкрай важливо
                 правильно вибрати та купити гуму для вантажівки.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
           <div class="card">
@@ -121,6 +149,13 @@
                 поміняти на легкосплавні колеса. Головне при цьому — знати
                 параметри.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
           <div class="card">
@@ -136,6 +171,13 @@
                 диск покривається спеціальним захисним покриттям, яке запобігає
                 передчасному руйнуванню такої конструкції.
               </p>
+              <a
+                href="#"
+                class="btn btn-primary"
+                data-toggle="modal"
+                data-target="#buyModal"
+                >Замовити</a
+              >
             </div>
           </div>
         </div>
@@ -151,6 +193,13 @@
                   нової батареї, як правило, швидка розрядка пристроїв, а також
                   неможливість надалі експлуатувати авто.
                 </p>
+                <a
+                  href="#"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#buyModal"
+                  >Замовити</a
+                >
               </div>
             </div>
           </div>
@@ -168,6 +217,13 @@
                   вкрай проблематично. Саме тому необхідно стежити за станом
                   заряду мотоциклетного акумулятора.
                 </p>
+                <a
+                  href="#"
+                  class="btn btn-primary"
+                  data-toggle="modal"
+                  data-target="#buyModal"
+                  >Замовити</a
+                >
               </div>
             </div>
           </div>
@@ -211,6 +267,75 @@
         </div>
       </div>
     </footer>
+
+    <div
+      class="modal fade"
+      id="buyModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="buyModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="buyModalLabel">Форма покупки</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="name">Ваше ім'я</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  placeholder="Введіть ваше ім'я"
+                />
+              </div>
+              <div class="form-group">
+                <label for="email">Електронна пошта</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Введіть вашу електронну пошту"
+                />
+              </div>
+              <div class="form-group">
+                <label for="phone">Телефон</label>
+                <input
+                  type="tel"
+                  class="form-control"
+                  id="phone"
+                  placeholder="Введіть ваш телефон"
+                />
+              </div>
+              <div class="form-group">
+                <label for="feedback">Відгук</label>
+                <textarea
+                  class="form-control"
+                  id="feedback"
+                  rows="4"
+                  placeholder="Ваш відгук"
+                ></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Відправити</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
